--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
         </tr>
     </table>
     <div style="text-align: center; margin-top: 75px;">
-        <img src="./images/map.png" float="left" height="400">
-        <img src="./images/immigrants.png" height="400">
+        <img src="./images/map.png" height="600">
     </div>
 
 </body>
